--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div>
     <nav class="l_navbar">
-        <li class="list"><a href="#about">about</a></li>
+        <li class="list" ><a href="#about">about</a></li>
         <li class="list" ><a href="#services">services</a></li>
         <li class="list"><a href="#gallery">gallery</a></li>  
         <li class="list"><a href="#contact">contact</a></li>   
@@ -70,20 +70,20 @@
     <header class="head2" id="services">
         <div class="hed2" >
         <div class="bx bxs-building-house" id="bxs">
-        <p>Aenean vel est id massa <br>condimentum</p>
+        <p>Aenean vel est id massa</p><p>condimentum</p>
         </div>
         <div class="bx bx-scatter-chart" id="bxs">
-            <p>Suspendisse interdum lectus <br>condimentum</p>
+            <p>Suspendisse interdum lectus</p><p>condimentum</p>
             </div>
             <div class="bx bxs-image" id="bxs">
-                <p>Suspendisse interdum lectus <br>condimentum</p>
+                <p>Suspendisse interdum lectus </p><p>condimentum</p>
                 </div>
             </div>
         </header>
     <section class="pkr">
     <div class="services">
         <div class="sp1">
-            <h3>.02 Allquam pretium hendrerit. </h3><br>
+            <h2>.02 Allquam pretium hendrerit. </h2><br>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. impedit <br> facilis, ipsa voluptate eaque sint quos necessitatibus  consectetur <br> ad laudantium, animi sit culpa quo libero eius nisi fugit.</p><br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. impedit <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p><br></div>
             <div class="sp3">
@@ -116,7 +116,7 @@
     </header>
     <header class="contact"  id="contact">
         <div class="contact1">
-                <p class="us">contact us</p>
+                <p class="us">.04 contact us</p>
          </div>
          </header>
         <div class="end">
@@ -133,7 +133,9 @@
                 <input type="submit" value="send" class="name1">
         </div>
         <div class="end2">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro facilis assumenda voluptatum iure asperiores, pariatur dicta dolores incidunt earum non expedita. Nisi non pariatur culpa commodi qui beatae et accusantium.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. impedit <br> Lorem ipsum dolor sit amet consectetur adipisicing elit.  </p><br>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. impedit facilis, ipsa voluptate eaque sint quos necessitatibus consectetur ad laudantium, animi sit culpa quo libero eius nisi fugit.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. impedit facilis, </p> <br>
         </div>
             </div>
             <div class="contact1">
